crates/squealy-macros/tests/compile_fail/unsupported_column_attribute.stderr
error: unsupported Table field attribute `bogus`
 --> tests/compile_fail/unsupported_column_attribute.rs:3:10
  |
3 | #[derive(Table)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
